--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <h1>Chien JQuery1</h1>
+    <h1>Chien Songs</h1>
+    <button id="updateSongsButton">Update Songs</button>
 </body>
 </html>
