--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
 <body>
     <h1>Chien Songs</h1>
     <button id="updateSongsButton">Update Songs</button>
+
+    <ul id="songsOut">
+        
+    </ul>
 </body>
 </html>
