--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
 </head>
 <body>
     <h1>Chien Songs</h1>
-    <button id="updateSongsButton">Update Songs</button>
+    <input id="addTitle" placeholder="Add Title" type="text">
+     <input id="addArtist" placeholder="Add Artist" type="text">
+      <input id="addAlbum" placeholder="Add Album" type="text">
+       <input id="addYear" placeholder="Add Year"type="number">
+      
+    <button id="updateSongsButton">Add Songs</button>
 
     <ul id="songsOut">
-        
+
     </ul>
 </body>
 </html>
